--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: linear infinite 20s alternate;
   }
 }
 
@@ -36,3 +36,4 @@
     transform: rotate(360deg);
   }
 }
+
